micro-go-modifié/_build/default/mgoparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On PACKAGE shift to state 1
-- On prog shift to state 147
## Reductions:

State 1:
## Known stack suffix:
## PACKAGE
## LR(1) items:
prog -> PACKAGE . IDENT SEMI decls EOF [ # ]
prog -> PACKAGE . IDENT SEMI IMPORT STRING SEMI decls EOF [ # ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## PACKAGE IDENT
## LR(1) items:
prog -> PACKAGE IDENT . SEMI decls EOF [ # ]
prog -> PACKAGE IDENT . SEMI IMPORT STRING SEMI decls EOF [ # ]
## Transitions:
-- On SEMI shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## PACKAGE IDENT SEMI
## LR(1) items:
prog -> PACKAGE IDENT SEMI . decls EOF [ # ]
prog -> PACKAGE IDENT SEMI . IMPORT STRING SEMI decls EOF [ # ]
## Transitions:
-- On TYPE shift to state 4
-- On IMPORT shift to state 24
-- On FUNC shift to state 27
-- On structure shift to state 139
-- On fonction shift to state 140
-- On decls shift to state 145
-- On decl shift to state 143
## Reductions:
-- On EOF
--   reduce production decls ->

State 4:
## Known stack suffix:
## TYPE
## LR(1) items:
structure -> TYPE . ident STRUCT BEGIN opt_field_decls END SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 5
-- On ident shift to state 6
## Reductions:

State 5:
## Known stack suffix:
## IDENT
## LR(1) items:
ident -> IDENT . [ STRUCT STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE IDENT GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STRUCT STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE IDENT GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND
--   reduce production ident -> IDENT

State 6:
## Known stack suffix:
## TYPE ident
## LR(1) items:
structure -> TYPE ident . STRUCT BEGIN opt_field_decls END SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On STRUCT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## TYPE ident STRUCT
## LR(1) items:
structure -> TYPE ident STRUCT . BEGIN opt_field_decls END SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On BEGIN shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## TYPE ident STRUCT BEGIN
## LR(1) items:
structure -> TYPE ident STRUCT BEGIN . opt_field_decls END SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 5
-- On opt_field_decls shift to state 9
-- On ident_list shift to state 12
-- On ident shift to state 19
-- On field_decls shift to state 20
-- On field_decl shift to state 21
## Reductions:
-- On END
--   reduce production opt_field_decls ->

State 9:
## Known stack suffix:
## TYPE ident STRUCT BEGIN opt_field_decls
## LR(1) items:
structure -> TYPE ident STRUCT BEGIN opt_field_decls . END SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On END shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## TYPE ident STRUCT BEGIN opt_field_decls END
## LR(1) items:
structure -> TYPE ident STRUCT BEGIN opt_field_decls END . SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On SEMI shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## TYPE ident STRUCT BEGIN opt_field_decls END SEMI
## LR(1) items:
structure -> TYPE ident STRUCT BEGIN opt_field_decls END SEMI . [ TYPE FUNC EOF ]
## Transitions:
## Reductions:
-- On TYPE FUNC EOF
--   reduce production structure -> TYPE ident STRUCT BEGIN opt_field_decls END SEMI

State 12:
## Known stack suffix:
## ident_list
## LR(1) items:
field_decl -> ident_list . typ [ SEMI END ]
ident_list -> ident_list . COMMA ident [ STAR IDENT COMMA ]
## Transitions:
-- On STAR shift to state 13
-- On IDENT shift to state 15
-- On COMMA shift to state 16
-- On typ shift to state 18
## Reductions:

State 13:
## Known stack suffix:
## STAR
## LR(1) items:
typ -> STAR . IDENT [ SEMI RPAR END COMMA BEGIN ASSIGN ]
## Transitions:
-- On IDENT shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## STAR IDENT
## LR(1) items:
typ -> STAR IDENT . [ SEMI RPAR END COMMA BEGIN ASSIGN ]
## Transitions:
## Reductions:
-- On SEMI RPAR END COMMA BEGIN ASSIGN
--   reduce production typ -> STAR IDENT

State 15:
## Known stack suffix:
## IDENT
## LR(1) items:
typ -> IDENT . [ SEMI RPAR END COMMA BEGIN ASSIGN ]
## Transitions:
## Reductions:
-- On SEMI RPAR END COMMA BEGIN ASSIGN
--   reduce production typ -> IDENT

State 16:
## Known stack suffix:
## ident_list COMMA
## LR(1) items:
ident_list -> ident_list COMMA . ident [ STAR SEMI IDENT END COMMA ASSIGN ]
## Transitions:
-- On IDENT shift to state 5
-- On ident shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## ident_list COMMA ident
## LR(1) items:
ident_list -> ident_list COMMA ident . [ STAR SEMI IDENT END COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On STAR SEMI IDENT END COMMA ASSIGN
--   reduce production ident_list -> ident_list COMMA ident

State 18:
## Known stack suffix:
## ident_list typ
## LR(1) items:
field_decl -> ident_list typ . [ SEMI END ]
## Transitions:
## Reductions:
-- On SEMI END
--   reduce production field_decl -> ident_list typ

State 19:
## Known stack suffix:
## ident
## LR(1) items:
ident_list -> ident . [ STAR SEMI IDENT END COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On STAR SEMI IDENT END COMMA ASSIGN
--   reduce production ident_list -> ident

State 20:
## Known stack suffix:
## field_decls
## LR(1) items:
opt_field_decls -> field_decls . [ END ]
## Transitions:
## Reductions:
-- On END
--   reduce production opt_field_decls -> field_decls

State 21:
## Known stack suffix:
## field_decl
## LR(1) items:
field_decls -> field_decl . SEMI [ END ]
field_decls -> field_decl . [ END ]
field_decls -> field_decl . SEMI field_decls [ END ]
## Transitions:
-- On SEMI shift to state 22
## Reductions:
-- On END
--   reduce production field_decls -> field_decl

State 22:
## Known stack suffix:
## field_decl SEMI
## LR(1) items:
field_decls -> field_decl SEMI . [ END ]
field_decls -> field_decl SEMI . field_decls [ END ]
## Transitions:
-- On IDENT shift to state 5
-- On ident_list shift to state 12
-- On ident shift to state 19
-- On field_decls shift to state 23
-- On field_decl shift to state 21
## Reductions:
-- On END
--   reduce production field_decls -> field_decl SEMI

State 23:
## Known stack suffix:
## field_decl SEMI field_decls
## LR(1) items:
field_decls -> field_decl SEMI field_decls . [ END ]
## Transitions:
## Reductions:
-- On END
--   reduce production field_decls -> field_decl SEMI field_decls

State 24:
## Known stack suffix:
## PACKAGE IDENT SEMI IMPORT
## LR(1) items:
prog -> PACKAGE IDENT SEMI IMPORT . STRING SEMI decls EOF [ # ]
## Transitions:
-- On STRING shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## PACKAGE IDENT SEMI IMPORT STRING
## LR(1) items:
prog -> PACKAGE IDENT SEMI IMPORT STRING . SEMI decls EOF [ # ]
## Transitions:
-- On SEMI shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## PACKAGE IDENT SEMI IMPORT STRING SEMI
## LR(1) items:
prog -> PACKAGE IDENT SEMI IMPORT STRING SEMI . decls EOF [ # ]
## Transitions:
-- On TYPE shift to state 4
-- On FUNC shift to state 27
-- On structure shift to state 139
-- On fonction shift to state 140
-- On decls shift to state 141
-- On decl shift to state 143
## Reductions:
-- On EOF
--   reduce production decls ->

State 27:
## Known stack suffix:
## FUNC
## LR(1) items:
fonction -> FUNC . ident LPAR opt_params RPAR opt_type_ret bloc SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 5
-- On ident shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## FUNC ident
## LR(1) items:
fonction -> FUNC ident . LPAR opt_params RPAR opt_type_ret bloc SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On LPAR shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## FUNC ident LPAR
## LR(1) items:
fonction -> FUNC ident LPAR . opt_params RPAR opt_type_ret bloc SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 5
-- On vars_decl shift to state 30
-- On param_list shift to state 35
-- On opt_params shift to state 36
-- On ident_list shift to state 33
-- On ident shift to state 19
## Reductions:
-- On RPAR
--   reduce production opt_params ->

State 30:
## Known stack suffix:
## vars_decl
## LR(1) items:
param_list -> vars_decl . [ RPAR ]
param_list -> vars_decl . COMMA param_list [ RPAR ]
## Transitions:
-- On COMMA shift to state 31
## Reductions:
-- On RPAR
--   reduce production param_list -> vars_decl

State 31:
## Known stack suffix:
## vars_decl COMMA
## LR(1) items:
param_list -> vars_decl COMMA . param_list [ RPAR ]
## Transitions:
-- On IDENT shift to state 5
-- On vars_decl shift to state 30
-- On param_list shift to state 32
-- On ident_list shift to state 33
-- On ident shift to state 19
## Reductions:

State 32:
## Known stack suffix:
## vars_decl COMMA param_list
## LR(1) items:
param_list -> vars_decl COMMA param_list . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production param_list -> vars_decl COMMA param_list

State 33:
## Known stack suffix:
## ident_list
## LR(1) items:
ident_list -> ident_list . COMMA ident [ STAR IDENT COMMA ]
vars_decl -> ident_list . typ [ RPAR COMMA ]
## Transitions:
-- On STAR shift to state 13
-- On IDENT shift to state 15
-- On COMMA shift to state 16
-- On typ shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## ident_list typ
## LR(1) items:
vars_decl -> ident_list typ . [ RPAR COMMA ]
## Transitions:
## Reductions:
-- On RPAR COMMA
--   reduce production vars_decl -> ident_list typ

State 35:
## Known stack suffix:
## param_list
## LR(1) items:
opt_params -> param_list . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production opt_params -> param_list

State 36:
## Known stack suffix:
## FUNC ident LPAR opt_params
## LR(1) items:
fonction -> FUNC ident LPAR opt_params . RPAR opt_type_ret bloc SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On RPAR shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## FUNC ident LPAR opt_params RPAR
## LR(1) items:
fonction -> FUNC ident LPAR opt_params RPAR . opt_type_ret bloc SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On STAR shift to state 13
-- On LPAR shift to state 38
-- On IDENT shift to state 15
-- On typ shift to state 44
-- On opt_type_ret shift to state 45
## Reductions:
-- On BEGIN
--   reduce production opt_type_ret ->

State 38:
## Known stack suffix:
## LPAR
## LR(1) items:
opt_type_ret -> LPAR . ret_type_list RPAR [ BEGIN ]
## Transitions:
-- On STAR shift to state 13
-- On IDENT shift to state 15
-- On typ shift to state 39
-- On ret_type_list shift to state 42
## Reductions:

State 39:
## Known stack suffix:
## typ
## LR(1) items:
ret_type_list -> typ . [ RPAR ]
ret_type_list -> typ . COMMA ret_type_list [ RPAR ]
ret_type_list -> typ . COMMA [ RPAR ]
## Transitions:
-- On COMMA shift to state 40
## Reductions:
-- On RPAR
--   reduce production ret_type_list -> typ

State 40:
## Known stack suffix:
## typ COMMA
## LR(1) items:
ret_type_list -> typ COMMA . ret_type_list [ RPAR ]
ret_type_list -> typ COMMA . [ RPAR ]
## Transitions:
-- On STAR shift to state 13
-- On IDENT shift to state 15
-- On typ shift to state 39
-- On ret_type_list shift to state 41
## Reductions:
-- On RPAR
--   reduce production ret_type_list -> typ COMMA

State 41:
## Known stack suffix:
## typ COMMA ret_type_list
## LR(1) items:
ret_type_list -> typ COMMA ret_type_list . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production ret_type_list -> typ COMMA ret_type_list

State 42:
## Known stack suffix:
## LPAR ret_type_list
## LR(1) items:
opt_type_ret -> LPAR ret_type_list . RPAR [ BEGIN ]
## Transitions:
-- On RPAR shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## LPAR ret_type_list RPAR
## LR(1) items:
opt_type_ret -> LPAR ret_type_list RPAR . [ BEGIN ]
## Transitions:
## Reductions:
-- On BEGIN
--   reduce production opt_type_ret -> LPAR ret_type_list RPAR

State 44:
## Known stack suffix:
## typ
## LR(1) items:
opt_type_ret -> typ . [ BEGIN ]
## Transitions:
## Reductions:
-- On BEGIN
--   reduce production opt_type_ret -> typ

State 45:
## Known stack suffix:
## FUNC ident LPAR opt_params RPAR opt_type_ret
## LR(1) items:
fonction -> FUNC ident LPAR opt_params RPAR opt_type_ret . bloc SEMI [ TYPE FUNC EOF ]
## Transitions:
-- On BEGIN shift to state 46
-- On bloc shift to state 137
## Reductions:

State 46:
## Known stack suffix:
## BEGIN
## LR(1) items:
bloc -> BEGIN . END [ SEMI END ELSE ]
bloc -> BEGIN . instrs opt_semi END [ SEMI END ELSE ]
## Transitions:
-- On VAR shift to state 47
-- On TRUE shift to state 52
-- On STRING shift to state 53
-- On RETURN shift to state 109
-- On NOT shift to state 54
-- On NIL shift to state 55
-- On MINUS shift to state 56
-- On LPAR shift to state 57
-- On INT shift to state 58
-- On IF shift to state 112
-- On IDS_DECL shift to state 117
-- On IDENT shift to state 5
-- On FOR shift to state 119
-- On FALSE shift to state 59
-- On END shift to state 123
-- On primary shift to state 60
-- On postfix shift to state 62
-- On instrs shift to state 124
-- On instr_simple shift to state 126
-- On instr shift to state 136
-- On ident shift to state 63
-- On expr_list shift to state 128
-- On expr shift to state 131
## Reductions:

State 47:
## Known stack suffix:
## VAR
## LR(1) items:
instr -> VAR . ident_list opt_var_type opt_var_init [ SEMI END ]
## Transitions:
-- On IDENT shift to state 5
-- On ident_list shift to state 48
-- On ident shift to state 19
## Reductions:

State 48:
## Known stack suffix:
## VAR ident_list
## LR(1) items:
ident_list -> ident_list . COMMA ident [ STAR SEMI IDENT END COMMA ASSIGN ]
instr -> VAR ident_list . opt_var_type opt_var_init [ SEMI END ]
## Transitions:
-- On STAR shift to state 13
-- On IDENT shift to state 15
-- On COMMA shift to state 16
-- On typ shift to state 49
-- On opt_var_type shift to state 50
## Reductions:
-- On SEMI END ASSIGN
--   reduce production opt_var_type ->

State 49:
## Known stack suffix:
## typ
## LR(1) items:
opt_var_type -> typ . [ SEMI END ASSIGN ]
## Transitions:
## Reductions:
-- On SEMI END ASSIGN
--   reduce production opt_var_type -> typ

State 50:
## Known stack suffix:
## VAR ident_list opt_var_type
## LR(1) items:
instr -> VAR ident_list opt_var_type . opt_var_init [ SEMI END ]
## Transitions:
-- On ASSIGN shift to state 51
-- On opt_var_init shift to state 108
## Reductions:
-- On SEMI END
--   reduce production opt_var_init ->

State 51:
## Known stack suffix:
## ASSIGN
## LR(1) items:
opt_var_init -> ASSIGN . expr_list [ SEMI END ]
## Transitions:
-- On TRUE shift to state 52
-- On STRING shift to state 53
-- On NOT shift to state 54
-- On NIL shift to state 55
-- On MINUS shift to state 56
-- On LPAR shift to state 57
-- On INT shift to state 58
-- On IDENT shift to state 5
-- On FALSE shift to state 59
-- On primary shift to state 60
-- On postfix shift to state 62
-- On ident shift to state 63
-- On expr_list shift to state 104
-- On expr shift to state 107
## Reductions:

State 52:
## Known stack suffix:
## TRUE
## LR(1) items:
primary -> TRUE . [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND
--   reduce production primary -> TRUE

State 53:
## Known stack suffix:
## STRING
## LR(1) items:
primary -> STRING . [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND
--   reduce production primary -> STRING

State 54:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND ]
## Transitions:
-- On TRUE shift to state 52
-- On STRING shift to state 53
-- On NOT shift to state 54
-- On NIL shift to state 55
-- On MINUS shift to state 56
-- On LPAR shift to state 57
-- On INT shift to state 58
-- On IDENT shift to state 5
-- On FALSE shift to state 59
-- On primary shift to state 60
-- On postfix shift to state 62
-- On ident shift to state 63
-- On expr shift to state 103
## Reductions:

State 55:
## Known stack suffix:
## NIL
## LR(1) items:
primary -> NIL . [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND
--   reduce production primary -> NIL

State 56:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND ]
## Transitions:
-- On TRUE shift to state 52
-- On STRING shift to state 53
-- On NOT shift to state 54
-- On NIL shift to state 55
-- On MINUS shift to state 56
-- On LPAR shift to state 57
-- On INT shift to state 58
-- On IDENT shift to state 5
-- On FALSE shift to state 59
-- On primary shift to state 60
-- On postfix shift to state 62
-- On ident shift to state 63
-- On expr shift to state 102
## Reductions:

State 57:
## Known stack suffix:
## LPAR
## LR(1) items:
primary -> LPAR . expr RPAR [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
-- On TRUE shift to state 52
-- On STRING shift to state 53
-- On NOT shift to state 54
-- On NIL shift to state 55
-- On MINUS shift to state 56
-- On LPAR shift to state 57
-- On INT shift to state 58
-- On IDENT shift to state 5
-- On FALSE shift to state 59
-- On primary shift to state 60
-- On postfix shift to state 62
-- On ident shift to state 63
-- On expr shift to state 100
## Reductions:

State 58:
## Known stack suffix:
## INT
## LR(1) items:
primary -> INT . [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND
--   reduce production primary -> INT

State 59:
## Known stack suffix:
## FALSE
## LR(1) items:
primary -> FALSE . [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND
--   reduce production primary -> FALSE

State 60:
## Known stack suffix:
## primary
## LR(1) items:
postfix -> primary . postfix_suffix [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND ]
## Transitions:
-- On LPAR shift to state 61
-- On DOT shift to state 93
-- On postfix_suffix shift to state 99
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND
--   reduce production postfix_suffix ->

State 61:
## Known stack suffix:
## LPAR
## LR(1) items:
postfix_suffix -> LPAR . call_args RPAR postfix_suffix [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND ]
## Transitions:
-- On TRUE shift to state 52
-- On STRING shift to state 53
-- On NOT shift to state 54
-- On NIL shift to state 55
-- On MINUS shift to state 56
-- On LPAR shift to state 57
-- On INT shift to state 58
-- On IDENT shift to state 5
-- On FALSE shift to state 59
-- On primary shift to state 60
-- On postfix shift to state 62
-- On ident shift to state 63
-- On expr shift to state 64
-- On call_args shift to state 91
## Reductions:
-- On RPAR COMMA
--   reduce production call_args ->

State 62:
## Known stack suffix:
## postfix
## LR(1) items:
expr -> postfix . [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND
--   reduce production expr -> postfix

State 63:
## Known stack suffix:
## ident
## LR(1) items:
primary -> ident . [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND ]
## Transitions:
## Reductions:
-- On STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LPAR LE GT GE EQEQ END DOT COMMA BEGIN ASSIGN AND
--   reduce production primary -> ident

State 64:
## Known stack suffix:
## expr
## LR(1) items:
call_args -> expr . [ RPAR COMMA ]
expr -> expr . OR expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . AND expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . EQEQ expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . NOTEQ expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . LT expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . LE expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . GT expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . GE expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . PLUS expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . MINUS expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . STAR expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . SLASH expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
expr -> expr . PERCENT expr [ STAR SLASH RPAR PLUS PERCENT OR NOTEQ MINUS LT LE GT GE EQEQ COMMA AND ]
## Transitions:
-- On STAR shift to state 65
-- On SLASH shift to state 67
-- On PLUS shift to state 69
-- On PERCENT shift to state 71
-- On OR shift to state 73
-- On NOTEQ shift to state 75
-- On MINUS shift to state 77
-- On LT shift to state 79
-- On LE shift to state 81
-- On GT shift to state 83
-- On GE shift to state 85
-- On EQEQ shift to state 87
-- On AND shift to state 89
## Reductions:
-- On RPAR COMMA
--   reduce production call_args -> expr

State 65:
## Known stack suffix:
## expr STAR
## LR(1) items:
expr -> expr STAR . expr [ STAR SLASH SEMI RPAR PLUSPLUS PLUS PERCENT OR NOTEQ MINUSMINUS MINUS LT LE GT GE EQEQ END COMMA BEGIN ASSIGN AND ]
## Transitions:
-- On TRUE shift to state 52
-- On STRING shift to state 53
-- On NOT shift to state 54
-- On NIL shift to state 55
-- On MINUS shift to state 56
-- On LPAR shift to state 57
-- On INT shift to state 58
-- On IDENT shift to state 5
-- On FALSE shift to state 59
-- On primary shift to state 60
-- On postfix shift to state 62
-- On ident shift to state 63
-- On expr shift to state 66
## Reductions:
